--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="" src="" alt="">
+            <img class="img_man_skills" src="images/man.png" alt="">
             <h3>Lorem & Ipsum</h3>
             <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
           </div>
-          <div class="skill-row">
-            <img class="" src="" alt="">
+          <div class="skill-row_right">
+            <img class="img_man_skills" src="images/man.png" alt="">
             <h3>Lorem Ipsum Dolor</h3>
             <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
           </div>
